--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>GIT</title>
   </head>
   <body>
-    <h1>Salom</h1>
+    <section class="java">
+      <div class="container">
+        <div class="java_inner">
+          <div class="java_inner_left">
+            <h1 class="java_inner_left_title">Javohir</h1>
+            <p class="java_inner_left_text">Tashpo'latov</p>
+            <button class="java_inner_left_btn">+998 ** *** 70 71</button>
+          </div>
+          <div class="java_inner_right">
+            <img src="" alt="" class="java_inner_right_img">
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
