--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container">
+        <h1>Javohir</h1>
+      </div>
+    </footer>
   </body>
 </html>
