--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GIT</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GIT</title>
+</head>
+
+<body>
+  <h1>Salom</h1>
+
+
+  <footer>
+    <h2>footer</h2>
     <h1>Salom</h1>
+    <h2>ggg</h2>
+    <h3>Salom</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam assumenda deserunt sint temporibus, odio saepe
+      excepturi dicta sequi illum cumque blanditiis, nulla rem iste dignissimos cum corporis molestias totam. Possimus!
+    </p>
+    <a href="#">more</a>
+    <h4>salom</h4>
+  </footer>
+</body>
 
-
-    <footer>
-      <h2>footer</h2>
-      <h1>Salom</h1>
-      <h2>ggg</h2>
-      <h3>Salom</h3>
-    </footer>
-  </body>
 </html>
