--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
       </div>
     </section>
 
+
+    <section>👑👑👑(●'◡'●)👑👑👑</section>
+
+
+
+
     <footer>
       <div class="container">
         <h1>Javohir</h1>
