--- a/index.html
+++ b/index.html
@@ -1,61 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GIT</title>
-</head>
-
-<body>
-  <h1>Salom</h1>
-
-
-  <footer>
-    <h2>footer</h2>
-    <h1>Salom</h1>
-    <h2>ggg</h2>
-    <h3>Salom</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam assumenda deserunt sint temporibus, odio saepe
-      excepturi dicta sequi illum cumque blanditiis, nulla rem iste dignissimos cum corporis molestias totam. Possimus!
-    </p>
-    <a href="#">more</a>
-    <h4>salom</h4>
-  </footer>
-</body>
-
-</html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GIT</title>
   </head>
-  <body>
-    <section class="java">
-      <div class="container">
-        <div class="java_inner">
-          <div class="java_inner_left">
-            <h1 class="java_inner_left_title">Javohir</h1>
-            <p class="java_inner_left_text">Tashpo'latov</p>
-            <button class="java_inner_left_btn">+998 ** *** 70 71</button>
-          </div>
-          <div class="java_inner_right">
-            <img src="" alt="" class="java_inner_right_img">
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-    <section>👑👑👑(●'◡'●)👑👑👑</section>
-
-
-
-
-    <footer>
-      <div class="container">
-        <h1>Javohir</h1>
-      </div>
-    </footer>
-  </body>
+  <body></body>
 </html>
