--- a/index.html
+++ b/index.html
@@ -1,36 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GIT</title>
-  </head>
-  <body>
-    <section class="java">
-      <div class="container">
-        <div class="java_inner">
-          <div class="java_inner_left">
-            <h1 class="java_inner_left_title">Javohir</h1>
-            <p class="java_inner_left_text">Tashpo'latov</p>
-            <button class="java_inner_left_btn">+998 ** *** 70 71</button>
-          </div>
-          <div class="java_inner_right">
-            <img src="" alt="" class="java_inner_right_img">
-          </div>
-        </div>
-      </div>
-    </section>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 
-    <section>👑👑👑(●'◡'●)👑👑👑</section>
+<body>
+  <section>Nima gap</section>
+</body>
 
-
-
-
-    <footer>
-      <div class="container">
-        <h1>Javohir</h1>
-      </div>
-    </footer>
-  </body>
 </html>
