--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -13,6 +15,15 @@
       </div>
     </div>
   </header>
+
+  <section>
+    <div class="container">
+      <div class="inner">
+        <h1>Welcome to the Repository</h1>
+      </div>
+    </div>
+  </section>
+
   <footer>
     <div class="container">
       <div class="inner">
@@ -21,4 +32,5 @@
     </div>
   </footer>
 </body>
+
 </html>
